fix the modal overflow scroll

--- a/src/scss/GroceryListModal.scss
+++ b/src/scss/GroceryListModal.scss
@@ -12,7 +12,7 @@
     position: absolute;
     top: 0;
     left: -100%;
-    height: 100vh;
+    height: calc(100vh - 108px);
     width: unquote("min(85vw, 450px)");
     z-index: 3;
     padding: 24px;
@@ -60,7 +60,7 @@
         flex-direction: column;
         row-gap: 16px;
         margin-top: 16px;
-        max-height: calc(100vh - 120px);
+        max-height: calc(100vh - 108px);
         overflow-y: auto;
         scrollbar-width: none;
         padding-bottom: 100px;
@@ -163,7 +163,7 @@
         flex-direction: column;
         row-gap: 16px;
         margin-top: 16px;
-        max-height: calc(100vh - 120px);
+        max-height: calc(100vh - 108px);
         overflow-y: auto;
         scrollbar-width: none;
 
