--- a/src/scss/Recipes.scss
+++ b/src/scss/Recipes.scss
@@ -550,7 +550,7 @@
             .modal-content {
                 height: 100%;
                 .modal-body {
-                    height: calc(100vh - 109px);
+                    height: calc(100vh - 108px);
                     .filters-container {
                         height: 100%;
                         flex-wrap: unset;
